# gta-sa-plugin-cmake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: DllMain.cpp
